--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -16,6 +16,9 @@
 .app__aboutus-content {
     width: 100%;
     z-index: 2;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .app__aboutus-content_about{
@@ -30,7 +33,6 @@
 
 .app__aboutus-content_knife {
     margin: 2rem 4rem;
-    z-index: 1;
 }
 
 .app__aboutus-content_knife img{
