--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -10,8 +10,7 @@
 
 .app__specialMenu-menu{
     width: 100%;
-
-    margin: 2rem 0;
+    margin: 1rem 0;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -25,6 +24,7 @@
     line-height: 58.5px;
     letter-spacing: 0.04em;
     color: var(--color-white);
+    text-align: center      ;
 }
 
 .app__specialMenu-menu_wine,
@@ -56,15 +56,34 @@
 
 /*Media Queries*/
 @media screen and (max-width: 2000px){
+    .app__specialMenu-menu_img{
+        width: 650px;
+    }
 
+    .app__specialMenu-menu_img{
+        height: 880px;
+    }
 }
 
 @media screen and (max-width: 1150px){
     .app__specialMenu-menu{
         flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .app__specialMenu-menu_img{
+        margin: 3rem 0;
     }
 }
 
 @media screen and (max-width: 650px){
-    
+    .app__specialMenu-menu_img{
+        width: 100%;
+    }
+
+    .app__specialMenu-menu_heading{
+        font-size: 35px;
+        line-height: 48.5px;
+    }
 }
