--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-
-    margin: 5rem;
 }
 
 .app__chef-content_quote{
@@ -15,7 +13,7 @@
 .app__chef-content_quote img{
     width: 47px;
     height: 40px;
-    margin: 0 1rem 1rem 0;
+    margin: 1rem 0 ;
 }
 
 .app__chef-sign{
