--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -80,10 +80,14 @@
 @media screen and (max-width: 650px){
     .app__specialMenu-menu_img{
         width: 100%;
+        height: 50%;
     }
+    
 
     .app__specialMenu-menu_heading{
         font-size: 35px;
         line-height: 48.5px;
     }
+
+
 }
