--- a/src/container/Intro/Intro.css
+++ b/src/container/Intro/Intro.css
@@ -1,6 +1,6 @@
 .app__video{
     height: 100vh;
-    position: static;
+    position: relative;
 }
 
 .app__video video{
@@ -15,10 +15,10 @@
     background: rgba(0, 0, 0, 0.65);
 }
 
-.app__video-overlay_circle{
+.app__video-overlay_circle {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: 1px solid var(--color-golder);
+    border: 1px solid var(--color-golden);
     cursor: pointer;
 }
